--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
 
 /* Hero Section */
 .hero {
-    background-image: url("/media/hero.png");
+    background-image: url("media/hero.png");
     background-size: cover;
     background-position: center;
     background-color: #f5f8ff;
@@ -215,7 +215,7 @@ body {
 .star {
     width: 20px;
     height: 20px;
-    background-image: url("/media/icon-star.png");
+    background-image: url("media/icon-star.png");
     background-size: cover;
 }
 
@@ -235,7 +235,7 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-image: url("/media/avatar.png");
+    background-image: url("media/avatar.png");
     background-size: cover;
 }
 
